[gd_scene load_steps=5 format=3 uid="uid://bt4v5evcry8op"]

[ext_resource type="Script" path="res://GameFiles/Script/main_menu.gd" id="1_s4xhk"]
[ext_resource type="Theme" uid="uid://bhkspvig5phsg" path="res://GameFiles/Resources/Themes/mainMenuButtonTheme.tres" id="2_xoyls"]

[sub_resource type="Theme" id="Theme_4x8md"]
default_font_size = 85

[sub_resource type="Theme" id="Theme_rtoq7"]
default_font_size = 30

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s4xhk")
title = "Title"
subTitle = "SubTitle"

[node name="VersionMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VerionControl" type="Control" parent="VersionMargin"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="VersionMargin/VerionControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Ver 0.0.0.0"

[node name="MenuMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="TitleMargin" type="MarginContainer" parent="MenuMargin"]
layout_mode = 2

[node name="Control" type="Control" parent="MenuMargin/TitleMargin"]
layout_mode = 2

[node name="titleLabel" type="Label" parent="MenuMargin/TitleMargin/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 49.0
grow_horizontal = 2
theme = SubResource("Theme_4x8md")
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubTitleMargin" type="MarginContainer" parent="MenuMargin"]
layout_mode = 2
theme_override_constants/margin_top = 135

[node name="Control2" type="Control" parent="MenuMargin/SubTitleMargin"]
layout_mode = 2

[node name="subtitleLabel" type="Label" parent="MenuMargin/SubTitleMargin/Control2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme = SubResource("Theme_rtoq7")
text = "SubTitle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButtons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 90

[node name="Control" type="Control" parent="MainMenuButtons"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuButtons/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -62.0
offset_right = 39.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PlayButton" type="Button" parent="MainMenuButtons/Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_xoyls")
text = "Play"

[node name="OptionsButton" type="Button" parent="MainMenuButtons/Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_xoyls")
text = "Options"

[node name="CreditsButton" type="Button" parent="MainMenuButtons/Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_xoyls")
text = "Credits"

[node name="ExitButton" type="Button" parent="MainMenuButtons/Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_xoyls")
text = "Exit"

[connection signal="pressed" from="MainMenuButtons/Control/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/Control/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/Control/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/Control/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
